--- a/data/ollama-chat.desktop
+++ b/data/ollama-chat.desktop
@@ -3,7 +3,8 @@ Version=1.0
 Type=Application
 Name=Ollama Chat
 Comment=Chat with AI models using Ollama
-Exec=/usr/local/bin/ollama-chat
-Icon=ollama-chat
+Exec=ollama-chat
+Icon=dev.datainquiry.ollama-chat
 Terminal=false
 Categories=Utility;Office;
+StartupWMClass=dev.datainquiry.ollama-chat
